gen/dataflow/v1b3/cargo-errors.log
    Checking google-dataflow1_b3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/dataflow/v1b3/lib)
error[E0072]: recursive type `schemas::ConcatPosition` has infinite size
   --> dataflow/v1b3/lib/src/lib.rs:461:5
    |
461 |     pub struct ConcatPosition {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
467 |         pub position: ::std::option::Option<crate::schemas::Position>,
    |         ------------------------------------------------------------- recursive without indirection
    |
    = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::ConcatPosition` representable

error[E0072]: recursive type `schemas::Position` has infinite size
    --> dataflow/v1b3/lib/src/lib.rs:3427:5
     |
3427 |     pub struct Position {
     |     ^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
3434 |         pub concat_position: ::std::option::Option<crate::schemas::ConcatPosition>,
     |         -------------------------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::Position` representable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0072`.
error: Could not compile `google-dataflow1_b3`.

To learn more, run the command again with --verbose.
